--- a/AutoRepair-AR/.gitignore
+++ b/AutoRepair-AR/.gitignore
@@ -12,6 +12,8 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+*.dwlt
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
