Added MRTK to project

--- a/AutoRepair-AR/.gitignore
+++ b/AutoRepair-AR/.gitignore
@@ -3,6 +3,7 @@
 # Parkerhill additions at the end
 
 **/Packages/com.ptc.vuforia.engine-10.13.3.tgz
+**/Packages/com.ptc.vuforia.engine-10.14.4.tgz
 
 /[Ll]ibrary/
 /[Tt]emp/
